fix footer line wrap

--- a/wom_user/static/css/wom_base.css
+++ b/wom_user/static/css/wom_base.css
@@ -31,7 +31,8 @@ Site: https://github.com/tibonihoo/wateronmars
 #wom-brand-name {font-weight: bold; color: #ffffff; font-size: 17px;}
 a#wom-brand-name:hover {text-decoration:none;}
 a { color: #3465a4; }
-.footer { text-align: center; line-height: 60%; margin-top: 3em; }
+.footer { text-align: center; font-size: 11px; line-height: 1; margin-top: 3em; }
+.footer p { margin-bottom: 3px; }
 .footer ul li { display: inline; }
 .jumbotron {margin-top: 10px;}
 
